# openmp-demo

./: CMakeLists.txt  build.py
src/: main.cpp
